set overflow-y to scroll to avoid redifinition warnings

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ a:hover{
   margin: auto;
   width: 670px;
   height: 230px;
-  overflow: scroll;
+  overflow-y: scroll;
   overflow-x: hidden;
 }
 
